--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/react-hooks": "^3.2.1",
     "@types/jest": "24.0.22",
     "@types/node": "12.12.7",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "faker": "^4.1.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.2.0",
     "react-test-renderer": "^16.11.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +38,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/faker": "^4.1.12",
+    "@types/react-redux": "^7.1.9",
+    "@types/uuid": "^8.0.0",
+    "prettier": "^2.0.5"
   }
 }
