--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.2.0",
+    "react-scripts": "3.4.1",
     "react-test-renderer": "^16.11.0",
-    "typescript": "3.7.2",
+    "typescript": "^3.8.3",
     "uuid": "^8.3.0"
   },
   "scripts": {
