test(cypress): add cypress as a project dependency

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/faker": "^4.1.12",
     "@types/react-redux": "^7.1.9",
     "@types/uuid": "^8.0.0",
+    "cypress": "^5.4.0",
     "prettier": "^2.0.5"
   }
 }
