--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "start:all": "concurrently \"npm:start\" \"npm:cypress:open\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +45,7 @@
     "@types/faker": "^4.1.12",
     "@types/react-redux": "^7.1.9",
     "@types/uuid": "^8.0.0",
+    "concurrently": "^5.3.0",
     "cypress": "^5.4.0",
     "prettier": "^2.0.5"
   }
